fix(): addapt some stylings(inventory width's, scrollbar color/width)

--- a/static/styles/twodsix.css
+++ b/static/styles/twodsix.css
@@ -252,7 +252,7 @@ form .form-group span.units {
   color: #00e5ff !important;
 }
 
-.app .window-app .twodsix .sheet .actor .window-content {
+.app.window-app.twodsix.sheet.actor .window-content {
   overflow: hidden !important;
 }
 
@@ -268,7 +268,7 @@ h2 {
 
 .content-container {
   display: grid;
-  grid-template-columns: 22em 34.5em;
+  grid-template-columns: 21.8em 35em;
   gap: 1px 1px;
   position: relative;
   top: -2.4em;
@@ -619,18 +619,23 @@ a.notes-tab.active {
   text-shadow: none !important;
 }
 
+.tab, div{
+  scrollbar-width: thin;
+  scrollbar-color: #29aae1 #111;
+}
+
 .tab[data-tab].active {
   display: block;
   position: relative;
 }
 
 .tab.inventory {
-  height: 39.4em;
+  top: 2em;
+  height: 39em;
   overflow-x: hidden;
 }
 
 .character-inventory {
-  width: 34em;
   overflow-x: hidden;
 }
 
@@ -640,7 +645,7 @@ a.notes-tab.active {
 
 .items-weapons {
   display: grid;
-  grid-template-columns: 1em 14em 1.5em 1.5em 2.5em 3em 5em 4em;
+  grid-template-columns: 1em 14em 1.6em 1.6em 1.6em 3em 5em 5.5em;
   gap: 1px 1px;
   grid-template-areas: '. . . . .';
 }
@@ -659,21 +664,21 @@ a.notes-tab.active {
 
 .items-armor {
   display: grid;
-  grid-template-columns: 1em 14em 4em 3.5em 3.5em 4em 3em;
+  grid-template-columns: 1em 14em 3.5em 3.5em 3.5em 4em 4em;
   gap: 1px 1px;
   grid-template-areas: '. . . . .';
 }
 
 .items-augments {
   display: grid;
-  grid-template-columns: 1em 13em 3.5em 3.5em 4em 5em 3em;
+  grid-template-columns: 1em 12em 1.6em 1.6em 10.5em 4em 3em;
   gap: 1px 1px;
   grid-template-areas: '. . . . .';
 }
 
 .items-equipment {
   display: grid;
-  grid-template-columns: 1em 12em 1.5em 2.5em 13em 3em;
+  grid-template-columns: 1em 12em 1.6em 1.6em 13em 4.5em;
   gap: 1px 1px;
   grid-template-areas: '. . . . .';
 }
@@ -687,7 +692,7 @@ a.notes-tab.active {
 
 .items-consumable {
   display: grid;
-  grid-template-columns: 1em 15em 5em 2.5em 6.5em 3em;
+  grid-template-columns: 1em 15em 5em 2.5em 5.8em 4.5em;
   gap: 1px 1px;
   grid-template-areas: '. . . . .';
 }
@@ -791,7 +796,8 @@ input.skill-level-edit {
 }
 
 .tab.skills {
-  height: 39.4em;
+  top: 2em;
+  height: 39em;
   overflow-x: hidden;
 }
 
@@ -800,10 +806,10 @@ input.skill-level-edit {
 }
 
 .item-controls .item-toggle i { display: none; }
-.item-controls .item-toggle .fa-question-circle-o { display: inline; }
-.item-controls .item-toggle.ship .fa-question-circle-o,
-.item-controls .item-toggle.backpack .fa-question-circle-o,
-.item-controls .item-toggle.equipped .fa-question-circle-o { display: none; }
+.item-controls .item-toggle .fa-question-circle { display: inline; }
+.item-controls .item-toggle.ship .fa-question-circle,
+.item-controls .item-toggle.backpack .fa-question-circle,
+.item-controls .item-toggle.equipped .fa-question-circle { display: none; }
 .item-controls .item-toggle.ship .fa-space-shuttle,
 .item-controls .item-toggle.backpack .fa-suitcase,
 .item-controls .item-toggle.equipped .fa-child { display: inline; }
@@ -1010,14 +1016,9 @@ span.total-output {
 }
 
 .tab.info {
-  height: 39.4em;
+  top: 2em;
+  height: 39em;
   overflow-x: hidden;
-}
-
-.info {
-  margin-top: 2em;
-  overflow-x: hidden;
-  margin-bottom: -2em;
 }
 
 .info-container .editor {
@@ -1695,6 +1696,7 @@ a:hover {
 
 /* ------ Item page - Consumables ------ */
 .consumable-row {
+  padding-right: 3px;
   width: 100%;
   height: 30px;
 }
